Perma Beta /builds/worker/workspace/build/src/js/src/gc/RootMarking.cpp:157:10: error: enumeration value 'BinASTParser' not handled in switch [-Werror=switch] when Gecko 72 merges to Beta on 2019-12-02
Categories
(Core :: JavaScript: GC, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox70 | --- | unaffected |
| firefox71 | --- | unaffected |
| firefox72 | + | verified |
People
(Reporter: malexandru, Assigned: ptomato)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
Central as beta simulation: https://treeherder.mozilla.org/#/jobs?repo=try&resultStatus=testfailed%2Cbusted%2Cexception%2Crunnable&revision=10aecd38334c4776b1191e627d3627b394246cf1&selectedJob=278388135
Failure log: https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=278388135&repo=try&lineNumber=5238
[task 2019-11-27T11:57:52.030Z] 11:57:52 INFO - make[4]: Entering directory '/builds/worker/workspace/build/src/obj-firefox/js/src'
[task 2019-11-27T11:57:52.031Z] 11:57:52 INFO - /builds/worker/fetches/sccache/sccache /builds/worker/fetches/gcc/bin/g++ -o Interpreter.o -c -I/builds/worker/workspace/build/src/obj-firefox/dist/system_wrappers -include /builds/worker/workspace/build/src/config/gcc_hidden.h -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -DMOZILLA_CLIENT -include /builds/worker/workspace/build/src/obj-firefox/js/src/js-confdefs.h -Wall -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wsign-compare -Wtype-limits -Wunreachable-code -Wwrite-strings -Wno-invalid-offsetof -Wc++1z-compat -Wduplicated-cond -Wimplicit-fallthrough -Wno-error=maybe-uninitialized -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=coverage-mismatch -Wno-error=free-nonheap-object -Wformat -Wformat-overflow=2 -Wno-noexcept-type -D_GLIBCXX_USE_CXX11_ABI=0 -fno-sized-deallocation -fno-aligned-new -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -DDEBUG=1 -DWASM_SUPPORTS_HUGE_MEMORY -DJS_CACHEIR_SPEW -DJS_STRUCTURED_SPEW -DJS_HAS_CTYPES -DFFI_BUILDING -DEXPORT_JS_API -DMOZ_HAS_MOZGLUE -I/builds/worker/workspace/build/src/js/src -I/builds/worker/workspace/build/src/obj-firefox/js/src -I/builds/worker/workspace/build/src/obj-firefox/js/src/ctypes/libffi/include -I/builds/worker/workspace/build/src/js/src/ctypes/libffi/src/x86 -I/builds/worker/workspace/build/src/obj-firefox/dist/include -I/builds/worker/workspace/build/src/obj-firefox/dist/include/nspr -fPIC -g -freorder-blocks -O3 -fno-omit-frame-pointer -funwind-tables -Werror -fno-strict-aliasing -Werror=format -Wno-shadow -Wno-attributes -MD -MP -MF .deps/Interpreter.o.pp /builds/worker/workspace/build/src/js/src/vm/Interpreter.cpp
[task 2019-11-27T11:57:52.032Z] 11:57:52 INFO - /builds/worker/workspace/build/src/js/src/vm/Interpreter.cpp: In function 'bool js::GetProperty(JSContext*, JS::HandleValue, js::HandlePropertyName, JS::MutableHandleValue)':
[task 2019-11-27T11:57:52.032Z] 11:57:52 WARNING - /builds/worker/workspace/build/src/js/src/vm/Interpreter.cpp:4535:24: warning: 'proto' may be used uninitialized in this function [-Wmaybe-uninitialized]
[task 2019-11-27T11:57:52.032Z] 11:57:52 INFO - if (GetPropertyPure(cx, proto, NameToId(name), vp.address())) {
[task 2019-11-27T11:57:52.032Z] 11:57:52 INFO - ~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[task 2019-11-27T11:57:52.032Z] 11:57:52 INFO - make[4]: Leaving directory '/builds/worker/workspace/build/src/obj-firefox/js/src'
[task 2019-11-27T11:57:52.050Z] 11:57:52 INFO - make[4]: Entering directory '/builds/worker/workspace/build/src/obj-firefox/js/src'
[task 2019-11-27T11:57:52.051Z] 11:57:52 INFO - js/src/Unified_cpp_js_src16.o
[task 2019-11-27T11:57:52.051Z] 11:57:52 INFO - make[4]: Leaving directory '/builds/worker/workspace/build/src/obj-firefox/js/src'
[task 2019-11-27T11:57:52.502Z] 11:57:52 INFO - make[4]: Entering directory '/builds/worker/workspace/build/src/obj-firefox/js/src/jsapi-tests'
[task 2019-11-27T11:57:52.503Z] 11:57:52 INFO - /builds/worker/fetches/sccache/sccache /builds/worker/fetches/gcc/bin/g++ -o Unified_cpp_js_src_jsapi-tests18.o -c -I/builds/worker/workspace/build/src/obj-firefox/dist/system_wrappers -include /builds/worker/workspace/build/src/config/gcc_hidden.h -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -DMOZILLA_CLIENT -include /builds/worker/workspace/build/src/obj-firefox/js/src/js-confdefs.h -Wall -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wsign-compare -Wtype-limits -Wunreachable-code -Wwrite-strings -Wno-invalid-offsetof -Wc++1z-compat -Wduplicated-cond -Wimplicit-fallthrough -Wno-error=maybe-uninitialized -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=coverage-mismatch -Wno-error=free-nonheap-object -Wformat -Wformat-overflow=2 -Wno-noexcept-type -D_GLIBCXX_USE_CXX11_ABI=0 -fno-sized-deallocation -fno-aligned-new -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -DDEBUG=1 -DMOZ_HAS_MOZGLUE -DEXPORT_JS_API -Dtopsrcdir=/builds/worker/workspace/build/src/js/src -I/builds/worker/workspace/build/src/js/src/jsapi-tests -I/builds/worker/workspace/build/src/obj-firefox/js/src/jsapi-tests -I/builds/worker/workspace/build/src/obj-firefox/js/src -I/builds/worker/workspace/build/src/js/src -I/builds/worker/workspace/build/src/obj-firefox/dist/include -I/builds/worker/workspace/build/src/obj-firefox/dist/include/nspr -fPIC -g -freorder-blocks -O3 -fno-omit-frame-pointer -funwind-tables -Werror -fno-strict-aliasing -Werror=format -Wno-shadow -Wno-attributes -MD -MP -MF .deps/Unified_cpp_js_src_jsapi-tests18.o.pp Unified_cpp_js_src_jsapi-tests18.cpp
[task 2019-11-27T11:57:52.503Z] 11:57:52 INFO - make[4]: Leaving directory '/builds/worker/workspace/build/src/obj-firefox/js/src/jsapi-tests'
[task 2019-11-27T11:57:52.503Z] 11:57:52 INFO - make[4]: Entering directory '/builds/worker/workspace/build/src/obj-firefox/js/src/jsapi-tests'
[task 2019-11-27T11:57:52.503Z] 11:57:52 INFO - js/src/jsapi-tests/Unified_cpp_js_src_jsapi-tests19.o
[task 2019-11-27T11:57:52.503Z] 11:57:52 INFO - make[4]: Leaving directory '/builds/worker/workspace/build/src/obj-firefox/js/src/jsapi-tests'
[task 2019-11-27T11:57:52.592Z] 11:57:52 INFO - make[4]: Entering directory '/builds/worker/workspace/build/src/obj-firefox/js/src/gc'
[task 2019-11-27T11:57:52.592Z] 11:57:52 INFO - /builds/worker/fetches/sccache/sccache /builds/worker/fetches/gcc/bin/g++ -o Unified_cpp_js_src_gc1.o -c -I/builds/worker/workspace/build/src/obj-firefox/dist/system_wrappers -include /builds/worker/workspace/build/src/config/gcc_hidden.h -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -DMOZILLA_CLIENT -include /builds/worker/workspace/build/src/obj-firefox/js/src/js-confdefs.h -Wall -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wsign-compare -Wtype-limits -Wunreachable-code -Wwrite-strings -Wno-invalid-offsetof -Wc++1z-compat -Wduplicated-cond -Wimplicit-fallthrough -Wno-error=maybe-uninitialized -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=coverage-mismatch -Wno-error=free-nonheap-object -Wformat -Wformat-overflow=2 -Wno-noexcept-type -D_GLIBCXX_USE_CXX11_ABI=0 -fno-sized-deallocation -fno-aligned-new -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -DDEBUG=1 -DWASM_SUPPORTS_HUGE_MEMORY -DJS_CACHEIR_SPEW -DJS_STRUCTURED_SPEW -DJS_HAS_CTYPES -DFFI_BUILDING -DEXPORT_JS_API -DMOZ_HAS_MOZGLUE -I/builds/worker/workspace/build/src/js/src/gc -I/builds/worker/workspace/build/src/obj-firefox/js/src/gc -I/builds/worker/workspace/build/src/obj-firefox/js/src -I/builds/worker/workspace/build/src/js/src -I/builds/worker/workspace/build/src/obj-firefox/dist/include -I/builds/worker/workspace/build/src/obj-firefox/dist/include/nspr -fPIC -g -freorder-blocks -O3 -fno-omit-frame-pointer -funwind-tables -Werror -fno-strict-aliasing -Werror=format -Wno-shadow -Wno-attributes -MD -MP -MF .deps/Unified_cpp_js_src_gc1.o.pp Unified_cpp_js_src_gc1.cpp
[task 2019-11-27T11:57:52.592Z] 11:57:52 INFO - In file included from Unified_cpp_js_src_gc1.cpp:38:0:
[task 2019-11-27T11:57:52.592Z] 11:57:52 INFO - /builds/worker/workspace/build/src/js/src/gc/RootMarking.cpp: In member function 'void JS::AutoGCRooter::trace(JSTracer*)':
[task 2019-11-27T11:57:52.592Z] 11:57:52 ERROR - /builds/worker/workspace/build/src/js/src/gc/RootMarking.cpp:157:10: error: enumeration value 'BinASTParser' not handled in switch [-Werror=switch]
[task 2019-11-27T11:57:52.592Z] 11:57:52 INFO - switch (tag_) {
[task 2019-11-27T11:57:52.592Z] 11:57:52 INFO - ^
[task 2019-11-27T11:57:52.592Z] 11:57:52 INFO - cc1plus: all warnings being treated as errors
[task 2019-11-27T11:57:52.592Z] 11:57:52 INFO - /builds/worker/workspace/build/src/config/rules.mk:785: recipe for target 'Unified_cpp_js_src_gc1.o' failed
[task 2019-11-27T11:57:52.592Z] 11:57:52 ERROR - make[4]: *** [Unified_cpp_js_src_gc1.o] Error 1
[task 2019-11-27T11:57:52.592Z] 11:57:52 INFO - make[4]: Leaving directory '/builds/worker/workspace/build/src/obj-firefox/js/src/gc'
[task 2019-11-27T11:57:52.592Z] 11:57:52 INFO - /builds/worker/workspace/build/src/config/recurse.mk:74: recipe for target 'js/src/gc/target-objects' failed
[task 2019-11-27T11:57:52.593Z] 11:57:52 ERROR - make[3]: *** [js/src/gc/target-objects] Error 2
[task 2019-11-27T11:57:52.593Z] 11:57:52 INFO - make[3]: *** Waiting for unfinished jobs....
[task 2019-11-27T11:57:52.593Z] 11:57:52 INFO - make[4]: Entering directory '/builds/worker/workspace/build/src/obj-firefox/js/src/jsapi-tests'
[task 2019-11-27T11:57:52.593Z] 11:57:52 INFO - js/src/jsapi-tests/Unified_cpp_js_src_jsapi-tests2.o
[task 2019-11-27T11:57:52.593Z] 11:57:52 INFO - make[4]: Leaving directory '/builds/worker/workspace/build/src/obj-firefox/js/src/jsapi-tests'
[task 2019-11-27T11:57:54.081Z] 11:57:54 INFO - make[4]: Entering directory '/builds/worker/workspace/build/src/obj-firefox/js/src/jsapi-tests'
[task 2019-11-27T11:57:54.081Z] 11:57:54 INFO - /builds/worker/fetches/sccache/sccache /builds/worker/fetches/gcc/bin/g++ -o Unified_cpp_js_src_jsapi-tests2.o -c -I/builds/worker/workspace/build/src/obj-firefox/dist/system_wrappers -include /builds/worker/workspace/build/src/config/gcc_hidden.h -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -DMOZILLA_CLIENT -include /builds/worker/workspace/build/src/obj-firefox/js/src/js-confdefs.h -Wall -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wsign-compare -Wtype-limits -Wunreachable-code -Wwrite-strings -Wno-invalid-offsetof -Wc++1z-compat -Wduplicated-cond -Wimplicit-fallthrough -Wno-error=maybe-uninitialized -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=coverage-mismatch -Wno-error=free-nonheap-object -Wformat -Wformat-overflow=2 -Wno-noexcept-type -D_GLIBCXX_USE_CXX11_ABI=0 -fno-sized-deallocation -fno-aligned-new -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -DDEBUG=1 -DMOZ_HAS_MOZGLUE -DEXPORT_JS_API -Dtopsrcdir=/builds/worker/workspace/build/src/js/src -I/builds/worker/workspace/build/src/js/src/jsapi-tests -I/builds/worker/workspace/build/src/obj-firefox/js/src/jsapi-tests -I/builds/worker/workspace/build/src/obj-firefox/js/src -I/builds/worker/workspace/build/src/js/src -I/builds/worker/workspace/build/src/obj-firefox/dist/include -I/builds/worker/workspace/build/src/obj-firefox/dist/include/nspr -fPIC -g -freorder-blocks -O3 -fno-omit-frame-pointer -funwind-tables -Werror -fno-strict-aliasing -Werror=format -Wno-shadow -Wno-attributes -MD -MP -MF .deps/Unified_cpp_js_src_jsapi-tests2.o.pp Unified_cpp_js_src_jsapi-tests2.cpp
[task 2019-11-27T11:57:54.081Z] 11:57:54 INFO - make[4]: Leaving directory '/builds/worker/workspace/build/src/obj-firefox/js/src/jsapi-tests'
[task 2019-11-27T11:57:54.081Z] 11:57:54 INFO - make[4]: Entering directory '/builds/worker/workspace/build/src/obj-firefox/js/src/jsapi-tests'
Philip, this looks to be caused by the changes in Bug 1590907, could you please take a look?
| Assignee | ||
Comment 1•6 years ago
|
||
Updated•6 years ago
|
| Assignee | ||
Comment 2•6 years ago
|
||
I've attached a patch that should fix this warning.
Comment 4•6 years ago
|
||
| bugherder | ||
Updated•6 years ago
|
Updated•6 years ago
|
Comment 5•6 years ago
|
||
Verified as fixed with this beta sim:
https://treeherder.mozilla.org/#/jobs?repo=try&resultStatus=testfailed%2Cbusted%2Cexception%2Cretry%2Cusercancel%2Crunnable&revision=1ab64f99aca6b37798a9d6909a26f199ac025fd3
Updated•4 years ago
|
Description
•