Bug 1599743 - Handle BinASTParser tag even if BinAST not enabled. r=jwalden

Differential Revision: https://phabricator.services.mozilla.com/D55024